Views now render html properly for each index page.

--- a/resources/views/course.edge
+++ b/resources/views/course.edge
@@ -9,7 +9,7 @@
   <section>
     <div class="logo"></div>
     <div class="title"></div>
-    <div class="subtitle"><p>Answers view goes here.</p></div>
+    <div class="subtitle"><p>Course view goes here.</p></div>
   </section>
 </body>
 </html>
