--- a/resources/views/student.edge
+++ b/resources/views/student.edge
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Answers</title>
+  <title>Students</title>
   {{ style('style') }}
 </head>
 <body>
   <section>
     <div class="logo"></div>
     <div class="title"></div>
-    <div class="subtitle"><p>Answers view goes here.</p></div>
+    <div class="subtitle"><p>Student view goes here.</p></div>
   </section>
 </body>
 </html>
